// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"dirigeant . indépendant . cotisations et contributions: 1230
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6230
impôt . montant: 0
protection sociale . retraite . base: 38
protection sociale . retraite . complémentaire: 24
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"dirigeant . indépendant . cotisations et contributions: 4535
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19376
entreprise . chiffre d'affaires: 24535
impôt . montant: 624
protection sociale . retraite . base: 151
protection sociale . retraite . complémentaire: 95
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"dirigeant . indépendant . cotisations et contributions: 20592
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41140
entreprise . chiffre d'affaires: 70592
impôt . montant: 8860
protection sociale . retraite . base: 340
protection sociale . retraite . complémentaire: 274
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions: 21074
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40828
entreprise . chiffre d'affaires: 71074
impôt . montant: 9172
protection sociale . retraite . base: 323
protection sociale . retraite . complémentaire: 291
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions: 15033
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 33630
entreprise . chiffre d'affaires: 55033
impôt . montant: 6370
protection sociale . retraite . base: 307
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 3`] = `
"dirigeant . indépendant . cotisations et contributions: 11587
dirigeant . rémunération . net: 30000
dirigeant . rémunération . net . après impôt: 26656
entreprise . chiffre d'affaires: 41587
impôt . montant: 3344
protection sociale . retraite . base: null
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions: 31746
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47968
entreprise . chiffre d'affaires: 91746
impôt . montant: 12032
protection sociale . retraite . base: 340
protection sociale . retraite . complémentaire: 392
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions: 30891
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47975
entreprise . chiffre d'affaires: 90891
impôt . montant: 12025
protection sociale . retraite . base: 340
protection sociale . retraite . complémentaire: 392
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions: 30565
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47977
entreprise . chiffre d'affaires: 90565
impôt . montant: 12023
protection sociale . retraite . base: 452
protection sociale . retraite . complémentaire: 392
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions: 34911
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47942
entreprise . chiffre d'affaires: 94911
impôt . montant: 12058
protection sociale . retraite . base: 340
protection sociale . retraite . complémentaire: 393
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions: 32865
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47959
entreprise . chiffre d'affaires: 92865
impôt . montant: 12041
protection sociale . retraite . base: 457
protection sociale . retraite . complémentaire: 393
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions: 1847
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2847
impôt . montant: 0
protection sociale . retraite . base: 77
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"dirigeant . indépendant . cotisations et contributions: 31746
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47968
entreprise . chiffre d'affaires: 91746
impôt . montant: 12032
protection sociale . retraite . base: 340
protection sociale . retraite . complémentaire: 392
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"dirigeant . indépendant . cotisations et contributions: 6949
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 34332
entreprise . chiffre d'affaires: 46949
impôt . montant: 5668
protection sociale . retraite . base: 558
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 1`] = `
"dirigeant . indépendant . cotisations et contributions: 3449
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13449
impôt . montant: 0
protection sociale . retraite . base: 76
protection sociale . retraite . complémentaire: 47
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 2`] = `
"dirigeant . indépendant . cotisations et contributions: 20592
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41140
entreprise . chiffre d'affaires: 70592
impôt . montant: 8860
protection sociale . retraite . base: 340
protection sociale . retraite . complémentaire: 274
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 3`] = `
"dirigeant . indépendant . cotisations et contributions: 46766
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73139
entreprise . chiffre d'affaires: 146766
impôt . montant: 26861
protection sociale . retraite . base: 343
protection sociale . retraite . complémentaire: 856
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions: 956
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
entreprise . chiffre d'affaires: 1456
impôt . montant: 0
protection sociale . retraite . base: 38
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions: 1059
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2059
impôt . montant: 0
protection sociale . retraite . base: 38
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1159
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
entreprise . chiffre d'affaires: 2659
impôt . montant: 0
protection sociale . retraite . base: 38
protection sociale . retraite . complémentaire: 7
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"dirigeant . indépendant . cotisations et contributions: 1260
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
entreprise . chiffre d'affaires: 3260
impôt . montant: 0
protection sociale . retraite . base: 38
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"dirigeant . indépendant . cotisations et contributions: 1866
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6866
impôt . montant: 0
protection sociale . retraite . base: 38
protection sociale . retraite . complémentaire: 24
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"dirigeant . indépendant . cotisations et contributions: 3449
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13449
impôt . montant: 0
protection sociale . retraite . base: 76
protection sociale . retraite . complémentaire: 47
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"dirigeant . indépendant . cotisations et contributions: 46766
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73139
entreprise . chiffre d'affaires: 146766
impôt . montant: 26861
protection sociale . retraite . base: 343
protection sociale . retraite . complémentaire: 856
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"dirigeant . indépendant . cotisations et contributions: 251729
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 528702
entreprise . chiffre d'affaires: 1251729
impôt . montant: 471298
protection sociale . retraite . base: 352
protection sociale . retraite . complémentaire: 1508
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"dirigeant . indépendant . cotisations et contributions: 8631
dirigeant . rémunération . net: 21369
dirigeant . rémunération . net . après impôt: 20503
entreprise . chiffre d'affaires: 30000
impôt . montant: 866
protection sociale . retraite . base: 162
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"dirigeant . indépendant . cotisations et contributions: 8779
dirigeant . rémunération . net: 21221
dirigeant . rémunération . net . après impôt: 20378
entreprise . chiffre d'affaires: 30000
impôt . montant: 843
protection sociale . retraite . base: 161
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"dirigeant . indépendant . cotisations et contributions: 65221
dirigeant . rémunération . net: 234779
dirigeant . rémunération . net . après impôt: 148322
entreprise . chiffre d'affaires: 300000
impôt . montant: 86457
protection sociale . retraite . base: 352
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"dirigeant . indépendant . cotisations et contributions: 11499
dirigeant . rémunération . net: 38501
dirigeant . rémunération . net . après impôt: 33258
entreprise . chiffre d'affaires: 50000
impôt . montant: 5243
protection sociale . retraite . base: 292
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"dirigeant . indépendant . cotisations et contributions: 11920
dirigeant . rémunération . net: 38080
dirigeant . rémunération . net . après impôt: 32963
entreprise . chiffre d'affaires: 50000
impôt . montant: 5117
protection sociale . retraite . base: 289
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"dirigeant . indépendant . cotisations et contributions: 4632
dirigeant . rémunération . net: 15368
dirigeant . rémunération . net . après impôt: 15368
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 116
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"dirigeant . indépendant . cotisations et contributions: 15093
dirigeant . rémunération . net: 34907
dirigeant . rémunération . net . après impôt: 30742
entreprise . chiffre d'affaires: 50000
impôt . montant: 4165
protection sociale . retraite . base: 265
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"dirigeant . indépendant . cotisations et contributions: 14545
dirigeant . rémunération . net: 35455
dirigeant . rémunération . net . après impôt: 31127
entreprise . chiffre d'affaires: 50000
impôt . montant: 4328
protection sociale . retraite . base: 269
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"dirigeant . indépendant . cotisations et contributions: 20025
dirigeant . rémunération . net: 29975
dirigeant . rémunération . net . après impôt: 27291
entreprise . chiffre d'affaires: 50000
impôt . montant: 2684
protection sociale . retraite . base: 229
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"dirigeant . indépendant . cotisations et contributions: 90234
dirigeant . rémunération . net: 209766
dirigeant . rémunération . net . après impôt: 134565
entreprise . chiffre d'affaires: 300000
impôt . montant: 75201
protection sociale . retraite . base: 351
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"dirigeant . indépendant . cotisations et contributions: 109670
dirigeant . rémunération . net: 290330
dirigeant . rémunération . net . après impôt: 176118
entreprise . chiffre d'affaires: 400000
impôt . montant: 114212
protection sociale . retraite . base: 352
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"dirigeant . indépendant . cotisations et contributions: 34936
dirigeant . rémunération . net: 85064
dirigeant . rémunération . net . après impôt: 64625
entreprise . chiffre d'affaires: 120000
impôt . montant: 20439
protection sociale . retraite . base: 342
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"dirigeant . indépendant . cotisations et contributions: 14545
dirigeant . rémunération . net: 35455
dirigeant . rémunération . net . après impôt: 31127
entreprise . chiffre d'affaires: 50000
impôt . montant: 4328
protection sociale . retraite . base: 269
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"dirigeant . indépendant . cotisations et contributions: 12447
dirigeant . rémunération . net: 37553
dirigeant . rémunération . net . après impôt: 32595
entreprise . chiffre d'affaires: 50000
impôt . montant: 4958
protection sociale . retraite . base: 285
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"dirigeant . indépendant . cotisations et contributions: 5350
dirigeant . rémunération . net: 14650
dirigeant . rémunération . net . après impôt: 14650
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 111
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1605
dirigeant . rémunération . net: 2395
dirigeant . rémunération . net . après impôt: 2395
entreprise . chiffre d'affaires: 4000
impôt . montant: 0
protection sociale . retraite . base: 38
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 3

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"dirigeant . indépendant . cotisations et contributions: 5350
dirigeant . rémunération . net: 14650
dirigeant . rémunération . net . après impôt: 14650
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 111
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"dirigeant . indépendant . cotisations et contributions: 5350
dirigeant . rémunération . net: 14650
dirigeant . rémunération . net . après impôt: 14650
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 111
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"dirigeant . indépendant . cotisations et contributions: 5350
dirigeant . rémunération . net: 14650
dirigeant . rémunération . net . après impôt: 14650
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 111
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;
